--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,46 @@
-body {
+body,
+html {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  padding: 0;
+  font-family: "Open sans condensed", "Arial", -apple-system, BlinkMacSystemFont,
+    "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans",
+    "Droid Sans", "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  height: 100vh;
+  background-color: rgb(237, 242, 247);
+  box-sizing: border-box;
+}
+* {
+  box-sizing: border-box;
+}
+
+#root {
+  height: 100%;
+  box-sizing: border-box;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+@keyframes in {
+  0% {
+    letter-spacing: -17px;
+    opacity: 0;
+  }
+  30% {
+    letter-spacing: 0px;
+    opacity: 1;
+  }
+  100% {
+    letter-spacing: 0px;
+    opacity: 1;
+  }
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
 }
